2008-01-30  Sam Steingold  <sds@gnu.org>

	* makemake.in: libsvm requires FFI
	* modules/fastcgi/configure.in, modules/oracle/configure.in:
	* modules/pari/configure.in, modules/postgresql/configure.in:
        * modules/wildcard/configure.in, modules/zlib/configure.in:
	fail if ffcall is not present

2008-01-29  Sam Steingold  <sds@gnu.org>

	* po/Makefile.devel (LISPSOURCES): remove affi1
	(DSOURCES): remove affi, add funarg

2008-01-29  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.44 (2008-02-02)

2008-01-27  Sam Steingold  <sds@gnu.org>

	* comptran.d (C_rationalp): new macro
	(N_N_log_N, N_N_expt_N): use it

2008-01-27  Reini Urban  <rurban@x-ray.at>

	<35_trans4>
	* places.lisp, comptran.d, realrand.d, realtran.d:
	Translate comments to English. Convert # to /* */.

2008-01-27  Sam Steingold  <sds@gnu.org>

	* pathname.d (get_time_size) [WIN32_NATIVE]: strip trailing
	backslash from resolved_asciz and close search_handle.
	This actually fixes 2007-12-31 & 2008-01-25 patches.
	Thanks to Michael Kappert <michael.kappert@gmx.net> for testing.

2008-01-25  Sam Steingold  <sds@gnu.org>

	* pathname.d (get_time_size) [WIN32_NATIVE]: accept directories;
	this should fix the 2007-12-31 patch for woe32
	Thanks to Michael Kappert <michael.kappert@gmx.net> for testing.

2008-01-24  Sam Steingold  <sds@gnu.org>

	* lndir: do not link over CVS directories

2008-01-23  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1781476 ]: signal handling examples in glibc fail
	* modules/bindings/glibc/linux.lisp (sigaction): sa_restorer is
	now a generic pointer, not a pointer to a function, because...
	  The sa_restorer element is obsolete and should not be used.
	  POSIX does not specify a sa_restorer element.
	On Linux 2.6.22.7-57.fc6, sigaction(SIGINT) returns invalid
	pointers as sa_restorer

2008-01-23  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (finalize-coutput-file): constants
	*CONSTANT-TABLE* are now (const . guard)
	(DEF-C-CONST): accept :GUARD
