@@ -1,3 +1,10 @@
+2008-01-30  Sam Steingold  <sds@gnu.org>
+
+	* iofkts.tst: check that (copy-pprint-dispatch)
+	returns *print-pprint-dispatch-table*;
+	in all tests, bind *print-pprint-dispatch-table*
+	to (copy-pprint-dispatch nil), not (copy-pprint-dispatch)
+
 2008-01-25  Sam Steingold  <sds@gnu.org>
 
 	* path.tst: use EXT:DELETE-DIRECTORY, EXT:MAKE-DIRECTORY, and
